--- a/contact-me.html
+++ b/contact-me.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Welcome to my Kakao Clone" />
     <meta name="author" content="Nomad Coders" />
-    <title>Love you all</title>
+    <title>Contact Me</title>
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Title</h1>
-    <section>And I like this clone thing.</section>
-    <p>It can be anything.</p>
-    <a href="contact-me.html">Fake link</a>
-    <div>Nothing special</div>
-    <span>short whatever</span>
+    <h1>Contact me okay?</h1>
   </body>
 </html>
