--- a/3-5 Block/index.html
+++ b/3-5 Block/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inline</title>
     <style>
-      .box{
-          background-color: red;
-          width: 200px
-          height: 200px;
-          }
+      .box {
+        background-color: red;
+        width: 200px;
+        height: 200px;
+        border: 2px solid black;
+        display: block;
+      }
     </style>
   </head>
   <body>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <span class="box">1</span>
+    <span class="box">1</span>
+    <span class="box">1</span>
   </body>
 </html>
